# ResuMate

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: release.yml
app/: backend.py  frontend.py  launcher.py
app/api/: deps.py  main.py
app/api/dependencies/: dependencies.py
app/api/routes/: chat.py  memory.py  resume.py  template.py
app/core/: memory.py  storage.py  yaml_manager.py
app/core/agents/: builder.py  common.py  resume_content_editor.py  supervisor.py
app/frontend/: dependencies.py  main.py  renderer.py
app/frontend/chat/: chat.py
app/frontend/resume/: bkp.py  chat.py  resume_data.py  templates.py
app/frontend/ui_utils/: field_renderers.py  section_renderer.py
app/models/: certification.py  cv_item.py  education.py  experience.py  langauge.py  link.py  project.py  resume.py  skill.py
app/pages/: main.py
app/pages/chat/: chat.py
app/pages/home/: home.py
app/pages/resume/: resume_data.py  templates.py
app/pages/ui_utils/: section_renderer.py
documents/resumes/: Jane Doe.yaml
documents/templates/: classic.html.j2  modern.html.j2
